# Nproxy

./: .gitignore  2026-05-18-210736-gitlawb.txt  CLAUDE.md  LICENSE  README.ja.md  README.md  REVIEW_CHECKLIST.md  check_comments.py  dmesg.txt  gemini_oom_review.md  gemini_review.md  grok_rview.md  install.sh  monitor-status.sh  nativewin.txt  nativewin2.txt  nativewin3.txt  nproxy-run.sh  nproxy-uninstall.sh  nproxy_crash_2026-06-07T20-46-36-860Z.json  nproxy_crash_2026-06-07T20-47-21-348Z.json  psd  report.html  report_memory_compare.html  report_rust.html  result.txt  result250632.txt  transform.txt
.claude/: status_state.json
doc/: 01_investigation.md  02_overview_design.md  03_detailed_design.md  04_node_limit_report.md  05_rust_mvp_plan.md  06_text_io_design.md  07_text_io_results.md  08_principles.md  09_usage_scenario.md  aozora_analysis.md  aozora_card2569.md  aozora_dazai_kosho.md  aozora_manual_copyright.md  latest_task.md  node_v8_api_overview.md  nproxy_design.md  planning.md  security_advice.html  security_advice.md  task_nodeproduction.md  task_nproxy_node.md  tasklist.md  test_layout.md  todo.md  windows_alienware_test.md  windows_tasks.md
ld_preload/: Makefile  nproxy_ld.c
node/: nproxy.js  nproxy_crash_2026-06-06T20-49-08-009Z.json  nproxy_crash_2026-06-06T20-49-08-011Z.json  nproxy_crash_2026-06-06T20-49-16-555Z.json  nproxy_crash_2026-06-06T20-49-16-557Z.json  (+14 more)
rs/: Cargo.toml
rs/benches/: throughput.rs
rs/src/: child.rs  main.rs  memory.rs  observer.rs  relay.rs  text.rs
rs/tests/: basic_relay.rs  text_mode.rs
rs/tests/common/: mod.rs
(+35 files in other folders)
