[package]
name = "nproxy"
version = "0.9.0-beta.1"
edition = "2021"
description = "Runtime I/O proxy — transparent passthrough with memory-aware backpressure"
license = "GPL-3.0-only"
authors = ["professional-slacker <professional-slacker@users.noreply.github.com>"]
homepage = "https://github.com/professional-slacker/nproxy"
repository = "https://github.com/professional-slacker/nproxy"
keywords = ["proxy", "io", "backpressure", "memory", "pipe"]

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
encoding_rs = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
]}

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
